	jlib.

	* src/ejabberd_router.erl, src/ejabberd_local.erl,
	src/ejabberd_sm.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl, src/ejabberd_c2s.erl: Remove the
	compatibility code. It's becoming confusing to handle every case every
	where. Also, in JIDs (normal and short), the atom "undefined' is
	expected, not the empty string anymore!

2008-08-14  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* translate.erl (ascii_tolower): Accept 'undefined' as a language and
	treat it as the empty string.

	* src/gen_iq_handler.erl, src/ejabberd_local.erl, src/ejabberd_sm.erl:
	Remove the compatibility layer and always call modules with the new
	#iq record from Exmpp.

	* src/mod_roster.erl, src/mod_vcard.erl, src/adhoc.erl,
	src/mod_adhoc.erl, src/mod_configure.erl, src/mod_configure2.erl,
	src/mod_disco.erl, src/mod_last.erl: Convert to the new #iq record
	from Exmpp.

2008-08-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_offline.erl, src/mod_offline_odbc.erl, src/mod_echo.erl,
	src/mod_last.erl, src/mod_configure2.erl, src/mod_last_odbc.erl,
	src/gen_iq_handler.erl: Convert to exmpp.

	* src/adhoc.erl, src/mod_configure.erl, src/mod_roster.erl,
	src/mod_disco.erl, src/mod_caps.erl: Update to use the new
	exmpp_xml:get_attribute/{3,4} API.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl, src/ejabberd_service.erl, src/mod_adhoc.erl,
	src/mod_caps.erl, src/mod_configure.erl, src/mod_disco.erl,
	src/mod_echo.erl, src/mod_offline.erl, src/mod_roster.erl,
	src/mod_vcard.erl: Update to use the new names used in exmpp_jid.

2008-07-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/adhoc.erl, src/mod_configure.erl, src/mod_announce.erl,
	src/mod_adhoc.erl, src/gen_iq_handler.erl: Convert to exmpp.

2008-07-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_disco.erl, src/gen_iq_handler.erl: Convert to exmpp.
